--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="container mb-auto">
       <div class="row">
         <div class="col-md-12 mx-auto">
-          <p class="lead">Exercise your brain with simple exercise, boost your memory and improve concentration! <br> <p><strong><span id="seconds">00</span><span class="doispontos">:</span><span id="tens">00</span></strong></p></p>
+          <p class="lead">Exercise your brain with simple exercise<br> <p><strong><span id="seconds">00</span><span class="doispontos">:</span><span id="tens">00</span></strong></p></p>
           <div class="row">
             <div class="col-md-12 mx-auto">
               <div class="grid-container" id="myDIV">
