--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="container mb-auto">
       <div class="row">
         <div class="mx-auto col-md-9">
-          <h1 class="text-light text-center" ><strong>Find the Colors 1</strong></h1>
+          <h1 class="text-light text-center" ><strong>Find the Colors</strong></h1>
         </div>
       </div>
     </div>
