--- a/index.html
+++ b/index.html
@@ -70,6 +70,60 @@
       }
     }
 
+    .button-82-edge2 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 12px;
+      background: linear-gradient(to left,
+        rgb(0, 0, 82) 0%,
+        rgb(0, 0, 163) 8%,
+        rgb(0, 0, 163) 92%,
+        rgb(0, 0, 82) 100%);
+    }
+    .button-82-front2 {
+      display: block;
+      position: relative;
+      padding: 12px 27px;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      color: white;
+      background: rgb(0, 0, 240);
+      will-change: transform;
+      transform: translateY(-4px);
+      transition:
+        transform 600ms cubic-bezier(.3, .7, .4, 1);
+    }
+
+    .button-82-edge3 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 12px;
+      background: linear-gradient(to left,
+        rgb(0, 82, 0) 0%,
+        rgb(0, 163, 0) 8%,
+        rgb(0, 163, 0) 92%,
+        rgb(0, 82, 0) 100%);
+    }
+    .button-82-front3 {
+      display: block;
+      position: relative;
+      padding: 12px 27px;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      color: white;
+      background: rgb(0, 240, 0);
+      will-change: transform;
+      transform: translateY(-4px);
+      transition:
+        transform 600ms cubic-bezier(.3, .7, .4, 1);
+    }
+
     .button-82-pushable:hover {
       filter: brightness(110%);
       -webkit-filter: brightness(110%);
@@ -176,6 +230,11 @@
       height: auto;
     }
 
+    .imgautoadjust3 {
+      width: 80%;
+      height: auto;
+    }
+
     #seconds, #tens{
       font-size:2em;
       color:rgb(255, 255, 255);
@@ -250,17 +309,17 @@
           <button class="button-82-pushable" role="button" href="#" onclick="myFunction()" id="botaonext">
             <span class="button-82-shadow"></span>
             <span class="button-82-edge"></span>
-            <span class="button-82-front text"> > </span>
+            <span class="button-82-front text"><strong>></strong>  </span>
           </button>
           <button class="button-82-pushable" role="button" href="#" onclick="confere(lvl)" id="botaoresultado">
             <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front text"> = </span>
+            <span class="button-82-edge3"></span>
+            <span class="button-82-front3 text"> <strong>=</strong> </span>
           </button>
           <button class="button-82-pushable" role="button" href="#" onclick="restartFunction()" id="botaorestart">
             <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front text"> # </span>
+            <span class="button-82-edge2"></span>
+            <span class="button-82-front2 text"> <img src="restart.png" class="imgautoadjust3" width="20" height="25"> </span>
           </button>
         </div>
         <div class="col-2">
