--- a/index.html
+++ b/index.html
@@ -316,23 +316,6 @@
     </div>
     <div class="container mb-auto">
       <div class="row">
-        <div class="col-8">
-          <button class="button-82-pushable" role="button" href="#" onclick="myFunction()" id="botaonext">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front text"><strong>></strong>  </span>
-          </button>
-          <button class="button-82-pushable" role="button" href="#" onclick="confere(lvl)" id="botaoresultado">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge3"></span>
-            <span class="button-82-front3 text"> <strong>=</strong> </span>
-          </button>
-          <button class="button-82-pushable" role="button" href="#" onclick="restartFunction()" id="botaorestart">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge2"></span>
-            <span class="button-82-front2 text"> <img src="restart.png" class="imgautoadjust3" width="20" height="25"> </span>
-          </button>
-        </div>
         <div class="col-2">
           <label for="levelMenu" id="levelLabel" class="labelLevel" class="divlabel">Level</label>
         </div>
@@ -343,6 +326,24 @@
             <option value="3">3</option>
           </select>
         </div>
+        <div class="col-8" >
+          <button class="button-82-pushable" role="button" href="#" onclick="myFunction()" id="botaonext" style="float: right;">
+            <span class="button-82-shadow"></span>
+            <span class="button-82-edge"></span>
+            <span class="button-82-front text"><strong>></strong>  </span>
+          </button>
+          <button class="button-82-pushable" role="button" href="#" onclick="confere(lvl)" id="botaoresultado" style="float: right;">
+            <span class="button-82-shadow"></span>
+            <span class="button-82-edge3"></span>
+            <span class="button-82-front3 text"> <strong>=</strong> </span>
+          </button>
+          <button class="button-82-pushable" role="button" href="#" onclick="restartFunction()" id="botaorestart" style="float: right;">
+            <span class="button-82-shadow"></span>
+            <span class="button-82-edge2"></span>
+            <span class="button-82-front2 text"> <img src="restart.png" class="imgautoadjust3" width="20" height="25"> </span>
+          </button>
+        </div>
+        
       </div>
     </div>
     <div class="container mb-auto">
