--- a/index.html
+++ b/index.html
@@ -1520,6 +1520,7 @@ e defende a causa do pobre e do indigente.`
 		}
 		
 		document.getElementById("aqui").innerHTML = palavra;
+		setTimeout(() => {  document.getElementById("aqui").innerHTML = ""; }, 600);
 		
 		if (proverbs.charAt(pontointermediario) == "."){
 				botaotxt.style.display = 'none';
