--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <h1>🎯 Verificador de Números</h1>
         
         <div class="input-section">
-            <input type="text" id="numeroInput" placeholder="********" maxlength="8">
+            <input type="text" id="numeroInput"  maxlength="8">
         </div>
         
         <div class="buttons">
