--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <h1>🎯 Verificador de Números</h1>
         
         <div class="input-section">
-            <input type="text" id="numeroInput"  maxlength="8">
+            <input type="text" id="numeroInput" inputmode="numeric" pattern="[0-9]*" maxlength="8">
         </div>
         
         <div class="buttons">
